[gd_scene load_steps=20 format=3 uid="uid://4hjr3fcl6odq"]

[ext_resource type="Script" path="res://src/Campfire.gd" id="1_32l6o"]
[ext_resource type="Texture2D" uid="uid://dyp8gqxrnk6ll" path="res://Image/campfire/BG-static.png" id="2_vqedm"]
[ext_resource type="Texture2D" uid="uid://ddlaaurvyor1o" path="res://Image/campfire/Embark.png" id="3_shs40"]
[ext_resource type="Texture2D" uid="uid://d1bvrbqwotu74" path="res://Image/campfire/Embark-Hover.png" id="4_jrjvi"]
[ext_resource type="BitMap" uid="uid://bgg88kmnjbt53" path="res://Image/campfire/Embark-ClickMask.bmp" id="4_picgc"]
[ext_resource type="Texture2D" uid="uid://dye4u5pdsmifs" path="res://Image/campfire/SaveLoad.png" id="5_rlh2e"]
[ext_resource type="Texture2D" uid="uid://b4ctmxfb1rrh7" path="res://Image/campfire/SaveLoad-Hover.png" id="6_gje46"]
[ext_resource type="BitMap" uid="uid://bi3elswmvcwu5" path="res://Image/campfire/SaveLoad-ClickMask.bmp" id="6_h4rq7"]
[ext_resource type="Texture2D" uid="uid://dt5ru7n7du5yi" path="res://Image/campfire/Upgrade.png" id="7_alfhd"]
[ext_resource type="Texture2D" uid="uid://cjwf6oqv1k4ce" path="res://Image/campfire/Upgrade-Hover.png" id="8_1p5o3"]
[ext_resource type="BitMap" uid="uid://dcyygrqnawjmu" path="res://Image/campfire/Upgrade-ClickMask.bmp" id="8_kcuar"]
[ext_resource type="PackedScene" uid="uid://ycbqvltmppkh" path="res://MainScenes/skill_tree.tscn" id="12_li17o"]
[ext_resource type="AudioStream" uid="uid://dsuq45efjulon" path="res://audio/DLOST_-_Diabolic_Lord.wav" id="13_i1idq"]
[ext_resource type="FontFile" uid="uid://cvy4ahqpj54t0" path="res://fonts/Adventurer.ttf" id="14_uqnru"]

[sub_resource type="Animation" id="Animation_nwpus"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_bo547"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../BGMusic:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../BGMusic:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-80.0, 1.66533e-15]
}

[sub_resource type="Animation" id="Animation_ne8ly"]
resource_name = "fade_to_black"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../BGMusic:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1.51572),
"update": 0,
"values": [0.0, -80.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nn8k5"]
_data = {
"RESET": SubResource("Animation_nwpus"),
"fade_in": SubResource("Animation_bo547"),
"fade_to_black": SubResource("Animation_ne8ly")
}

[sub_resource type="LabelSettings" id="LabelSettings_s66j6"]
line_spacing = 4.0
font = ExtResource("14_uqnru")
font_size = 31
font_color = Color(0.160784, 0.0862745, 0.054902, 1)
outline_color = Color(0.356863, 0.239216, 0.211765, 0.792157)
shadow_color = Color(0, 0, 0, 0.0588235)

[node name="Campfire" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_32l6o")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_vqedm")
expand_mode = 2

[node name="Embark" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
tooltip_text = "Embark and face any who dare challenge you"
texture_normal = ExtResource("3_shs40")
texture_hover = ExtResource("4_jrjvi")
texture_click_mask = ExtResource("4_picgc")
stretch_mode = 5

[node name="MainMenu" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
tooltip_text = "Return to the main menu"
texture_normal = ExtResource("5_rlh2e")
texture_hover = ExtResource("6_gje46")
texture_click_mask = ExtResource("6_h4rq7")
stretch_mode = 5

[node name="Upgrade" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
tooltip_text = "Upgrade your stats and learn new spells."
texture_normal = ExtResource("7_alfhd")
texture_hover = ExtResource("8_1p5o3")
texture_click_mask = ExtResource("8_kcuar")
stretch_mode = 4

[node name="Skill Tree" parent="." instance=ExtResource("12_li17o")]
visible = false
layout_mode = 1

[node name="BGMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_i1idq")
volume_db = -80.0
autoplay = true

[node name="ScreenFade" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ScreenFadeAnim" type="AnimationPlayer" parent="ScreenFade"]
autoplay = "fade_in"
libraries = {
"": SubResource("AnimationLibrary_nn8k5")
}

[node name="CultName" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0095486
anchor_top = -0.0401235
anchor_right = 0.015625
anchor_bottom = -0.0401235
offset_left = 44.0
offset_top = 342.0
offset_right = 217.0
offset_bottom = 377.0
rotation = -0.163236
scale = Vector2(0.95661, 3.84463)
theme_override_font_sizes/font_size = 40
text = "12345678912"
label_settings = SubResource("LabelSettings_s66j6")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Embark" to="." method="_on_embark_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Upgrade" to="." method="_on_upgrade_pressed"]
